deploy/templates/tests/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev-env
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev.my-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-dev-my-react-app
            port:
              number: 80
